@@ -24,3 +24,4 @@ ggplot2 0.8.2  (2008-XX-XX)
 * cut_interval and cut_number utility functions to discretise continuous variables
 * scale_gradient: better default colour scheme from red to blue (thanks to Charlotte Wickham for providing the munsell colours)
 * scale_manual now works better with missing values
+* scale_discrete now correctly preserves empty factor levels
